Frontend improvements Fixed mobile view Changed schedule buttons view Added text-align center for schedule cards text

--- a/static/deps/css/styles.css
+++ b/static/deps/css/styles.css
@@ -526,8 +526,8 @@
     transition: background-color 0.3s; /* Плавный переход цвета при наведении */
 }
 
-.btn-current-week {
-    background-color: #90be6d; /* Основной цвет кнопки */
+.btn-action {
+    background-color: #45484c ; /* Основной цвет кнопки */
     color: white;
     border: none;
     padding: 10px 15px;
@@ -538,12 +538,12 @@
 }
 
 /* Стиль при наведении для активной кнопки */
-.btn-current-week:hover {
-    background-color: #6fa355; /* Темнее при наведении */
+.btn-action:hover {
+    background-color: #5c676e; /* Темнее при наведении */
 }
 
 /* Стиль неактивной кнопки */
-.btn-current-week.disabled {
+.btn-action.disabled {
     background-color: #d3d3d3; /* Серый цвет для неактивной кнопки */
     cursor: not-allowed; /* Изменяем курсор */
 }
@@ -559,7 +559,7 @@
 input[type="number"] {
     width: 60px; /* Ширина поля ввода */
     margin-left: 10px; /* Отступ слева для отделения от кнопки */
-    padding: 5px; /* Внутренний отступ для поля ввода */
+    padding: 8px; /* Внутренний отступ для поля ввода */
     border: 1px solid #ccc; /* Рамка вокруг поля ввода */
     border-radius: 5px; /* Скругление углов поля ввода */
     font-size: 16px; /* Размер шрифта в поле ввода */
@@ -673,8 +673,9 @@ white-space: nowrap;
 
         /* Время занятия */
         .lesson-time {
+            text-wrap: nowrap;
             font-weight: bold;
-            margin-right: 10px; /* Отступ между временем и типом занятия */
+            margin-right: 5px; /* Отступ между временем и типом занятия */
             text-align: right; /* Выравнивание по правому краю */
             width: 100px; /* Фиксированная ширина для времени */
         }
@@ -907,8 +908,11 @@ white-space: nowrap;
         width: 100%;
         text-align: center;
     }
-
+    .teacher-info {
+    text-align: center;
+    }
     .lesson-name {
+    text-align: center;
     font-weight: normal;
     font-size: 2vh;
     }
@@ -924,22 +928,12 @@ white-space: nowrap;
 
     .week-controls {
         display: flex;
-        flex-direction: column; /* Размещаем кнопки и инпут в столбик */
         align-items: center; /* Центрируем кнопки */
         margin-top: 10px; /* Отступ сверху */
     }
 
-    .btn-current-week,
-    .btn {
-        width: 100%; /* Кнопки на всю ширину */
-        margin: 5px 0; /* Отступ между кнопками */
-        padding: 10px; /* Увеличиваем высоту кнопок */
-        font-size: 1rem; /* Размер текста */
-    }
-
     #week-input {
-        width: 92%; /* Поле ввода на всю ширину */
-        margin-top: 10px; /* Отступ сверху */
+        width: 40px; /* Поле ввода на всю ширину */
     }
 
     .notification {
@@ -951,7 +945,7 @@ white-space: nowrap;
 
 
         /* Футер */
-.footer {
+        .footer {
             background-color: #2c2c2c;
             color: white;
             text-align: center;
